--- a/index.html
+++ b/index.html
@@ -15,11 +15,19 @@
             <ul id="navigation">
                 <li id="jaime">Jaime</li>
                 <a href="index.html" target="_blank">About</a> 
-                <a href="/portfolio.html" target="_blank">Portfolio</a> 
+                <a href="portfolio.html" target="_blank">Portfolio</a> 
                 <a href="contact.html" target="_blank">Contact</a> 
             </ul>
         </div>
         <br>
+
+
+        <div id="content">
+            <h2>About Me</h2>
+            <hr>
+            <img src="assets/images/jfcslc.png" alt="">
+            <p>I am not getting any messages in the #announcements channel any longer. I have all messages from every other channel I am subscribed to. I am getting this: https://cl.ly/oqmx when clicking on the #announcements channel. I don't understand why this is only happening with the #announcements channel especially since that channel has important times and dates and materials.</p>            
+        </div>
         <div id="sidebar">
             <h2>Connect With Me</h2>
             <hr>
@@ -28,15 +36,8 @@
             <a href="https://stackoverflow.com/users/8798330/jaime-franco-cerritos" target="_blank"><img src="assets/images/stack.png" alt=""></a>
         </div>
 
-        <div id="content">
-            <h2>About Me</h2>
-            <hr>
-            <img src="assets/images/jfcslc.png" alt="">
-            <p>I am not getting any messages in the #announcements channel any longer. I have all messages from every other channel I am subscribed to. I am getting this: https://cl.ly/oqmx when clicking on the #announcements channel. I don't understand why this is only happening with the #announcements channel especially since that channel has important times and dates and materials.</p>            
-        </div>
-
         <div id="footer">
-            <h1>footer</h1>
+            <h6>Jaime Franco Cerritos</h6>
         </div>
     </div>
 </body>
