--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
         
         <div id="header">
             <ul id="navigation">
-                <li id="jaime">Jaime</li>
+                <li id="jaime">Jaime Franco Cerritos</li>
                 <a href="index.html" target="_blank">About</a> 
                 <a href="/portfolio.html" target="_blank">Portfolio</a> 
                 <a href="contact.html" target="_blank">Contact</a> 
