--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Contact</title>
+    <link rel="icon" sizes="ico" href="oct.ico">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -14,9 +15,9 @@
         <div id="header">
             <ul id="navigation">
                 <li id="jaime">Jaime Franco Cerritos</li>
-                <a href="index.html" target="_blank">About</a> 
-                <a href="portfolio.html" target="_blank">Portfolio</a>  
-                <a href="contact.html" target="_blank">Contact</a> 
+                <a href="index.html" target="_blank" >About |</a> 
+                <a href="portfolio.html" target="_blank">Portfolio |</a>  
+                <a href="contact.html" target="_blank" id="side">Contact</a> 
             </ul>
         </div>
         <br>
