--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" sizes="ico" href="oct.ico">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Portfolio</title>
+    
+    <title>About</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
     
     <div id="container" class="clearfix" ::after>
@@ -14,9 +17,9 @@
         <div id="header">
             <ul id="navigation">
                 <li id="jaime">Jaime Franco Cerritos</li>
-                <a href="index.html" target="_blank">About</a> 
-                <a href="portfolio.html" target="_blank">Portfolio</a> 
-                <a href="contact.html" target="_blank">Contact</a> 
+                <a href="index.html" target="_blank" >About |</a> 
+                <a href="portfolio.html" target="_blank">Portfolio |</a> 
+                <a href="contact.html" target="_blank" id="side">Contact</a> 
             </ul>
         </div>
         <br>
@@ -26,7 +29,12 @@
             <h2>About Me</h2>
             <hr>
             <img src="assets/images/jfcslc.png" alt="">
-            <p>I am not getting any messages in the #announcements channel any longer. I have all messages from every other channel I am subscribed to. I am getting this: https://cl.ly/oqmx when clicking on the #announcements channel. I don't understand why this is only happening with the #announcements channel especially since that channel has important times and dates and materials.</p>            
+            <p>Raised in the Salt Lake Valley. I enjoy the outdoors when the temperature is bearable. Started coding in 2017 by doing online courses at Codecademy and Udacity . 
+            <br>
+            Ended up loving to code, I enrolled with the University Of Utah coding bootcamp. The day before I started classes at the University Of Utah coding bootcamp I was accepted into
+            The Grow with Google Challenge scholarship. 
+            <br>
+            Now my Days are filled with Work, research and Homework (from both coding bootcamps). The little spare time I have is spent at home on the couch with my adorable Greyhound, Greyson. </p>            
         </div>
         <div id="sidebar">
             <h2>Connect With Me</h2>
