--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Contact</title>
+    <title>Porfolio</title>
+    <link rel="icon" sizes="ico" href="oct.ico">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -14,30 +15,24 @@
         <div id="header">
             <ul id="navigation">
                 <li id="jaime">Jaime Franco Cerritos</li>
-                <a href="index.html" target="_blank">About</a> 
-                <a href="/portfolio.html" target="_blank">Portfolio</a> 
-                <a href="contact.html" target="_blank">Contact</a> 
+                <a href="index.html" target="_blank" >About |</a> 
+                <a href="/portfolio.html" target="_blank">Portfolio |</a> 
+                <a href="contact.html" target="_blank" id="side">Contact</a> 
             </ul>
         </div>
         <br>
 
 
         <div id="content">
-            <h2>Contact</h2>
+            <h2>Portfolio</h2>
             <hr>
             <div class="container">
-              <form action="mailto:someone@example.com" method="post" enctype="text/plain">
-                <label for="name">Name</label>
-                <input type="text" id="name" name="name" placeholder="John Smith">
-
-                <label for="email">Email</label>
-                <input type="text" id="email" name="email" placeholder="example@gmail.com">
-
-                <label for="subject">Message</label>
-                <textarea id="subject" name="subject"  style="height:200px"></textarea>
-
-                <input type="submit" value="Submit">
-              </form>
+                <img src="assets/images/folder.png" alt="" id="cat">
+                <img src="assets/images/folder.png" alt="" id="cat">
+                <img src="assets/images/folder.png" alt="" id="cat">
+                <img src="assets/images/folder.png" alt="" id="cat">
+                <img src="assets/images/folder.png" alt="" id="cat">
+                <img src="assets/images/folder.png" alt="" id="cat">
             </div>    
 
         </div>
