--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" sizes="ico" href="oct.ico">
+    <link rel="icon" sizes="ico" href="assets/images/octopus.ico">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -25,16 +25,27 @@
         <br>
 
 
-        <div id="content">
+        <div id="content" class="clearfix" ::after>
             <h2>About Me</h2>
             <hr>
             <img src="assets/images/jfcslc.png" alt="">
-            <p>Raised in the Salt Lake Valley. I enjoy the outdoors when the temperature is bearable. Started coding in 2017 by doing online courses at Codecademy and Udacity . 
+        <div id="pad">
+            <p>Raised in the Salt Lake Valley. 
             <br>
-            Ended up loving to code, I enrolled with the University Of Utah coding bootcamp. The day before I started classes at the University Of Utah coding bootcamp I was accepted into
-            The Grow with Google Challenge scholarship. 
+            I enjoy the outdoors when the temperature is bearable. 
             <br>
-            Now my Days are filled with Work, research and Homework (from both coding bootcamps). The little spare time I have is spent at home on the couch with my adorable Greyhound, Greyson. </p>            
+            Started coding in 2017 by doing online courses at Codecademy and Udacity. 
+            <br>
+            Ended up loving how challenging coding was. 
+            <br>
+            I enrolled with the University Of Utah coding bootcamp after extensive research. 
+            <br>
+            The day before classes begin at the University Of Utah coding bootcamp I was accepted into The Grow with Google Challenge scholarship. 
+            <br>
+            Now my Days are filled with Work, research and Homework (both bootcamps). 
+            <br>
+            The little spare time I have is spent at home on the couch with my adorable Greyhound, Greyson. </p>  
+        </div>              
         </div>
         <div id="sidebar">
             <h2>Connect With Me</h2>
