--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
             <ul id="navigation">
                 <li id="jaime">Jaime Franco Cerritos</li>
                 <a href="index.html" target="_blank" >About |</a> 
-                <a href="/portfolio.html" target="_blank">Portfolio |</a> 
+                <a href="portfolio.html" target="_blank">Portfolio |</a> 
                 <a href="contact.html" target="_blank" id="side">Contact</a> 
             </ul>
         </div>
@@ -27,12 +27,12 @@
             <h2>Portfolio</h2>
             <hr>
             <div class="container">
-                <img src="assets/images/folder.png" alt="" id="cat">
-                <img src="assets/images/folder.png" alt="" id="cat">
-                <img src="assets/images/folder.png" alt="" id="cat">
-                <img src="assets/images/folder.png" alt="" id="cat">
-                <img src="assets/images/folder.png" alt="" id="cat">
-                <img src="assets/images/folder.png" alt="" id="cat">
+                <img src="assets/images/folder.png" alt="" id="folders">
+                <img src="assets/images/folder.png" alt="" id="folders">
+                <img src="assets/images/folder.png" alt="" id="folders">
+                <img src="assets/images/folder.png" alt="" id="folders">
+                <img src="assets/images/folder.png" alt="" id="folders">
+                <img src="assets/images/folder.png" alt="" id="folders">
             </div>    
 
         </div>
