--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,50 +9,62 @@
     <link rel="icon" sizes="ico" href="oct.ico">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
-    
+
     <div id="container" class="clearfix" ::after>
-        
+
         <div id="header">
+            <logo id="jaime">Jaime Franco Cerritos</logo>
             <ul id="navigation">
-                <li id="jaime">Jaime Franco Cerritos</li>
-                <a href="index.html" target="_blank" >About |</a> 
-                <a href="portfolio.html" target="_blank">Portfolio |</a>  
-                <a href="contact.html" target="_blank" id="side">Contact</a> 
+                <a href="index.html" target="_blank">About |</a>
+                <a href="portfolio.html" target="_blank">Portfolio |</a>
+                <a href="contact.html" target="_blank" id="side">Contact</a>
             </ul>
         </div>
         <br>
 
+        <div id="center">
+            <div id="content">
+                <h2>Contact</h2>
+                <hr>
+                <div class="container">
+                    <form action="mailto:someone@example.com" method="post" enctype="text/plain">
+                        <label for="name">Name</label>
+                        <input type="text" id="name" name="name" placeholder="John Smith">
 
-        <div id="content">
-            <h2>Contact</h2>
-            <hr>
-            <div class="container">
-              <form action="mailto:someone@example.com" method="post" enctype="text/plain">
-                <label for="name">Name</label>
-                <input type="text" id="name" name="name" placeholder="John Smith">
+                        <label for="email">Email</label>
+                        <input type="text" id="email" name="email" placeholder="example@gmail.com">
 
-                <label for="email">Email</label>
-                <input type="text" id="email" name="email" placeholder="example@gmail.com">
+                        <label for="subject">Message</label>
+                        <textarea id="subject" name="subject" style="height:200px"></textarea>
 
-                <label for="subject">Message</label>
-                <textarea id="subject" name="subject"  style="height:200px"></textarea>
-
-                <input type="submit" value="Submit">
-              </form>
-            </div>         
+                        <input type="submit" value="Submit">
+                    </form>
+                </div>
+            </div>
+            <div id="sidebar">
+                <h2>Connect With Me</h2>
+                <hr>
+                <a href="https://github.com/jfcslc801" target="_blank">
+                    <img src="assets/images/github.png" alt="">
+                </a>
+                <a href="https://www.linkedin.com/in/jfcslc801/" target="_blank">
+                    <img src="assets/images/linkedin.png" alt="">
+                </a>
+                <a href="https://stackoverflow.com/users/8798330/jaime-franco-cerritos" target="_blank">
+                    <img src="assets/images/stack.png" alt="">
+                </a>
+            </div>
         </div>
-        <div id="sidebar">
-            <h2>Connect With Me</h2>
-            <hr>
-            <a href="https://github.com/jfcslc801" target="_blank"><img src="assets/images/github.png" alt=""></a>
-            <a href="https://www.linkedin.com/in/jfcslc801/" target="_blank"><img src="assets/images/linkedin.png" alt=""></a>
-            <a href="https://stackoverflow.com/users/8798330/jaime-franco-cerritos" target="_blank"><img src="assets/images/stack.png" alt=""></a>
-        </div>
+
+
+
 
         <div id="footer">
             <h6>Jaime Franco Cerritos</h6>
         </div>
     </div>
 </body>
+
 </html>
