--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul id="navigation">
                 <a href="index.html" target="_blank">About |</a>
                 <a href="portfolio.html" target="_blank">Portfolio |</a>
-                <a href="contact.html" target="_blank" id="side">Contact</a>
+                <a href="contact.html" target="_blank">Contact</a>
             </ul>
         </div>
         <br>
@@ -30,15 +30,20 @@
                 <hr>
                 <img src="assets/images/jfcslc.png" alt="">
                 <div id="pad">
-                    <p>Raised in the Salt Lake Valley.
-                        <br> I enjoy the outdoors when the temperature is bearable.
-                        <br> Started coding in 2017 by doing online courses at Codecademy and Udacity.
-                        <br> Ended up loving how challenging coding was.
-                        <br> I enrolled with the University Of Utah coding bootcamp after extensive research.
-                        <br> The day before classes begin at the University Of Utah coding bootcamp I was accepted into The Grow
-                        with Google Challenge scholarship.
-                        <br> Now my Days are filled with Work, research and Homework (both bootcamps).
-                        <br> The little spare time I have is spent at home on the couch with my adorable Greyhound, Greyson.
+                    <p>
+                        Raised in Salt Lake City, I moved here from Mexico with my immediate next of kin.
+                    </p>
+                    <p>
+                        I enjoy the outdoors when the temperature is bearable. Camping the Uintas is one of my favorite things to do.
+                    </p>
+                    <p>
+                        Started coding October of 2017 by doing online courses at Codecademy and Udacity. <br> Ended up loving how challenging coding
+                        was, after extensive research I enrolled with the University Of Utah coding bootcamp. <br> The day before
+                        classes begin at the U of U coding bootcamp, I was accepted into The Grow with Google Challenge scholarship.
+                    </p>
+                    <p>
+                        Now my Days are filled with Work, research and Homework (both bootcamps). The little spare time I have is spent at home on
+                        the couch with my adorable Greyhound, Greyson.
                     </p>
                 </div>
             </div>
