--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
             <ul id="navigation">
                 <a href="index.html" target="_blank">About |</a>
                 <a href="portfolio.html" target="_blank">Portfolio |</a>
-                <a href="contact.html" target="_blank" id="side">Contact</a>
+                <a href="contact.html" target="_blank">Contact</a>
             </ul>
         </div>
         <br>
