done with changes

--- a/contact.html
+++ b/contact.html
@@ -16,11 +16,11 @@
 
         <div id="header">
             <logo id="jaime">Jaime Franco Cerritos</logo>
-            <ul id="navigation">
-                <a href="index.html" target="_blank">About |</a>
-                <a href="portfolio.html" target="_blank">Portfolio |</a>
-                <a href="contact.html" target="_blank">Contact</a>
-            </ul>
+            <div>
+                    <a href="index.html" target="_blank">About |</a>
+                    <a href="portfolio.html" target="_blank">Portfolio |</a>
+                    <a href="contact.html" target="_blank">Contact</a>
+            </div>
         </div>
         <br>
 
