--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 
         <div id="header">
             <logo id="jaime">Jaime Franco Cerritos</logo>
-            <ul id="navigation">
+            <div>
                 <a href="index.html" target="_blank">About |</a>
                 <a href="portfolio.html" target="_blank">Portfolio |</a>
                 <a href="contact.html" target="_blank">Contact</a>
-            </ul>
+            </div>
         </div>
         <br>
         <div id="center">
@@ -37,9 +37,11 @@
                         I enjoy the outdoors when the temperature is bearable. Camping the Uintas is one of my favorite things to do.
                     </p>
                     <p>
-                        Started coding October of 2017 by doing online courses at Codecademy and Udacity. <br> Ended up loving how challenging coding
-                        was, after extensive research I enrolled with the University Of Utah coding bootcamp. <br> The day before
-                        classes begin at the U of U coding bootcamp, I was accepted into The Grow with Google Challenge scholarship.
+                        Started coding October of 2017 by doing online courses at Codecademy and Udacity.
+                        <br> Ended up loving how challenging coding was, after extensive research I enrolled with the University
+                        Of Utah coding bootcamp.
+                        <br> The day before classes begin at the U of U coding bootcamp, I was accepted into The Grow with Google
+                        Challenge scholarship.
                     </p>
                     <p>
                         Now my Days are filled with Work, research and Homework (both bootcamps). The little spare time I have is spent at home on
